Update HTML structure for better organization and readability

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <ul class="nav-links">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="/pages/nuevoND.html">Nuestros Diseños</a></li>
+                <li><a href="./pages/nuevoND.html">Nuestros Diseños</a></li>
                 <!-- pages/nuestrosdiseños.html -->
                 <li><a href="#">Hacemos Tu diseño</a></li>
                 <!-- pages/tudiseño.html -->
