--- a/pages/nuevoND.html
+++ b/pages/nuevoND.html
@@ -41,7 +41,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/1.jpg" alt="Producto 4">
+                    <img src="./img/1.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
