Fix image source paths in nuevoND.html for correct product display

--- a/pages/nuevoND.html
+++ b/pages/nuevoND.html
@@ -41,7 +41,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./img/1.jpg" alt="Producto 4">
+                    <img src="../img/1.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -52,7 +52,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/2.jpg" alt="Producto 4">
+                    <img src="../img/2.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -63,7 +63,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/3.jpg" alt="Producto 4">
+                    <img src="../img/3.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -74,7 +74,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/4.jpg" alt="Producto 4">
+                    <img src="../img/4.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -85,7 +85,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/5.jpg" alt="Producto 4">
+                    <img src="../img/5.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -96,7 +96,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/6.jpg" alt="Producto 4">
+                    <img src="../img/6.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -107,7 +107,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/7.jpg" alt="Producto 4">
+                    <img src="../img/7.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -118,7 +118,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/8.jpg" alt="Producto 4">
+                    <img src="../img/8.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -129,7 +129,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/9.jpg" alt="Producto 4">
+                    <img src="../img/9.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -140,7 +140,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/10.jpg" alt="Producto 4">
+                    <img src="../img/10.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -151,7 +151,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/11.jpg" alt="Producto 4">
+                    <img src="../img/11.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -162,7 +162,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/12.jpg" alt="Producto 4">
+                    <img src="../img/12.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -173,7 +173,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/13.jpg" alt="Producto 4">
+                    <img src="../img/13.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -184,7 +184,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/14.jpg" alt="Producto 4">
+                    <img src="../img/14.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -195,7 +195,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/15.jpg" alt="Producto 4">
+                    <img src="../img/15.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -206,7 +206,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/16.jpg" alt="Producto 4">
+                    <img src="../img/16.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -217,7 +217,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/17.jpg" alt="Producto 4">
+                    <img src="../img/17.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -228,7 +228,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/18.jpg" alt="Producto 4">
+                    <img src="../img/18.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -239,7 +239,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/19.jpg" alt="Producto 4">
+                    <img src="../img/19.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
