--- a/pages/nuevoND.html
+++ b/pages/nuevoND.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/logo.png" alt="" />
+            <img src="../img/logo.png" alt="" />
         </div>
         <nav class="navbar">
             <ul class="nav-links">
@@ -44,7 +44,7 @@
                     <img src="../img/1.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 1</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -55,7 +55,7 @@
                     <img src="../img/2.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 2</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -66,7 +66,7 @@
                     <img src="../img/3.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 3</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -77,7 +77,7 @@
                     <img src="../img/4.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 4</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -88,7 +88,7 @@
                     <img src="../img/5.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 5</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -110,7 +110,7 @@
                     <img src="../img/7.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 7</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -121,7 +121,7 @@
                     <img src="../img/8.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 8</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -132,7 +132,7 @@
                     <img src="../img/9.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 9</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -143,7 +143,7 @@
                     <img src="../img/10.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 10</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -154,7 +154,7 @@
                     <img src="../img/11.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 11</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -165,7 +165,7 @@
                     <img src="../img/12.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 12</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -176,7 +176,7 @@
                     <img src="../img/13.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 13</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -187,7 +187,7 @@
                     <img src="../img/14.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 14</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -198,7 +198,7 @@
                     <img src="../img/15.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 15</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -209,7 +209,7 @@
                     <img src="../img/16.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 16</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -220,7 +220,7 @@
                     <img src="../img/17.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 17</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -231,7 +231,7 @@
                     <img src="../img/18.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 18</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
@@ -242,7 +242,7 @@
                     <img src="../img/19.jpg" alt="Producto 4">
                 </div>
                 <div class="card-info">
-                    <h3>Producto 6</h3>
+                    <h3>Producto 19</h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
