Fix navigation links in nuevoND.html for correct relative paths

--- a/pages/nuevoND.html
+++ b/pages/nuevoND.html
@@ -15,10 +15,10 @@
         </div>
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#">Nuestros Diseños</a></li> <!-- pages/nuestrosdiseños.html -->
-                <li><a href="/index.html">Hacemos Tu diseño</a></li> <!-- pages/tudiseño.html -->
-                <li><a href="/index.html">Contacto</a></li> <!-- pages/tudiseño.html -->
+                <li><a href="../index.html">Hacemos Tu diseño</a></li> <!-- pages/tudiseño.html -->
+                <li><a href="../index.html">Contacto</a></li> <!-- pages/tudiseño.html -->
             </ul>
         </nav>
     </header>
