Fix image paths in index.html for consistent referencing

--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
 
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="img/1.jpg" alt="" />
+                <img src="./img/1.jpg" alt="" />
                 <div class="overlay">
                     <h3>Proyecto 1</h3>
                 </div>
             </div>
 
             <div class="portfolio-item">
-                <img src="img/2.jpg" alt="" />
+                <img src="./img/2.jpg" alt="" />
                 <div class="overlay">
                     <h3>Proyecto 2</h3>
                 </div>
             </div>
 
             <div class="portfolio-item">
-                <img src="img/3.jpg" alt="" />
+                <img src="./img/3.jpg" alt="" />
                 <div class="overlay">
                     <h3>Proyecto 3</h3>
                 </div>
             </div>
 
             <div class="portfolio-item">
-                <img src="/img/4.jpg" alt="" />
+                <img src="./img/4.jpg" alt="" />
                 <div class="overlay">
                     <h3>Proyecto 4</h3>
                 </div>
