Add Bootstrap integration and enhance navigation in nuevoND.html; create hacemostudiseño.css for design requests

--- a/pages/nuevoND.html
+++ b/pages/nuevoND.html
@@ -2,29 +2,32 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
     <title>Nuestros Productos</title>
-    <link rel="stylesheet" href="../css/newND.css">
+    <link rel="stylesheet" href="../css/newND.css" />
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="../img/logo.png" alt="" />
+            <a href="../index.html">
+                <img src="../img/logo.png" alt="" />
+            </a>
         </div>
-        <nav class="navbar">
+        <nav class="_navbar">
             <ul class="nav-links">
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Nuestros Diseños</a></li> <!-- pages/nuestrosdiseños.html -->
-                <li><a href="../index.html">Hacemos Tu diseño</a></li> <!-- pages/tudiseño.html -->
-                <li><a href="../index.html">Contacto</a></li> <!-- pages/tudiseño.html -->
+                <li><a href="#">Nuestros Diseños</a></li>
+                <li><a href="../index.html">Hacemos Tu diseño</a></li>
+                <li><a href="../index.html#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="layout">
-        <!-- SIDEBAR -->
         <aside class="sidebar">
             <h2>Categorías</h2>
             <ul class="categorias">
@@ -36,12 +39,10 @@
             </ul>
         </aside>
 
-        <!-- GRID PRODUCTOS -->
         <section class="grid-productos">
-
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/1.jpg" alt="Producto 4">
+                    <img src="../img/1.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 1</h3>
@@ -52,7 +53,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/2.jpg" alt="Producto 4">
+                    <img src="../img/2.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 2</h3>
@@ -63,7 +64,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/3.jpg" alt="Producto 4">
+                    <img src="../img/3.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 3</h3>
@@ -74,7 +75,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/4.jpg" alt="Producto 4">
+                    <img src="../img/4.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 4</h3>
@@ -85,7 +86,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/5.jpg" alt="Producto 4">
+                    <img src="../img/5.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 5</h3>
@@ -96,7 +97,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/6.jpg" alt="Producto 4">
+                    <img src="../img/6.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -107,7 +108,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/7.jpg" alt="Producto 4">
+                    <img src="../img/7.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 7</h3>
@@ -118,7 +119,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/8.jpg" alt="Producto 4">
+                    <img src="../img/8.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 8</h3>
@@ -129,7 +130,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/9.jpg" alt="Producto 4">
+                    <img src="../img/9.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 9</h3>
@@ -140,7 +141,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/10.jpg" alt="Producto 4">
+                    <img src="../img/10.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 10</h3>
@@ -151,7 +152,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/11.jpg" alt="Producto 4">
+                    <img src="../img/11.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 11</h3>
@@ -162,7 +163,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/12.jpg" alt="Producto 4">
+                    <img src="../img/12.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 12</h3>
@@ -173,7 +174,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/13.jpg" alt="Producto 4">
+                    <img src="../img/13.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 13</h3>
@@ -184,7 +185,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/14.jpg" alt="Producto 4">
+                    <img src="../img/14.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 14</h3>
@@ -195,7 +196,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/15.jpg" alt="Producto 4">
+                    <img src="../img/15.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 15</h3>
@@ -206,7 +207,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/16.jpg" alt="Producto 4">
+                    <img src="../img/16.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 16</h3>
@@ -217,7 +218,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/17.jpg" alt="Producto 4">
+                    <img src="../img/17.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 17</h3>
@@ -228,7 +229,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/18.jpg" alt="Producto 4">
+                    <img src="../img/18.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 18</h3>
@@ -239,7 +240,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="../img/19.jpg" alt="Producto 4">
+                    <img src="../img/19.jpg" alt="Producto" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 19</h3>
@@ -247,14 +248,10 @@
                     <button class="btn">Agregar al carrito</button>
                 </div>
             </div>
-
-
-
-
-
-
         </section>
     </main>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </html>
