--- a/index.html
+++ b/index.html
@@ -4,32 +4,42 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <title>Scultura 3D</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="" />
+            <a href="./img/logo.png">
+                <img src="img/logo.png" alt="" />
+            </a>
+            <a href="https://wa.me/+541130493689" target="_blank" class="text-success fs-4 me-3">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="https://www.instagram.com/tuusuario" target="_blank" class="text-danger fs-4">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
-        <nav class="navbar">
-            <ul class="nav-links">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="./pages/nuevoND.html">Nuestros Diseños</a></li>
-                <!-- pages/nuestrosdiseños.html -->
-                <li><a href="#">Hacemos Tu diseño</a></li>
-                <!-- pages/tudiseño.html -->
-                <li><a href="#">Contacto</a></li>
-                <!-- pages/tudiseño.html -->
-            </ul>
-        </nav>
+            <nav class="_navbar">
+                <ul class="nav-links">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="./pages/nuevoND.html">Nuestros Diseños</a></li>
+                    <li><a href="./pages/tudiseño.html">Hacemos Tu diseño</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
     </header>
 
     <section class="hero">
         <h1>Diseñamos e imprimimos tus ideas en 3D</h1>
         <p>Calidad profesional en impresión 3D, diseño y postprocesado.</p>
-        <a href="#presupuesto" class="btn-hero">Comenzar ahora</a>
+        <a href="#presupuesto" class="btn-hero">Tengo mi diseño</a>
     </section>
 
     <section class="services">
@@ -40,7 +50,6 @@
             </p>
 
             <div class="services-flex">
-                <!-- Servicio 1 -->
                 <div class="service-card">
                     <h3>Impresión Personalizada</h3>
                     <p>
@@ -49,7 +58,6 @@
                     </p>
                 </div>
 
-                <!-- Servicio 2 -->
                 <div class="service-card">
                     <h3>Souvenirs & Regalos</h3>
                     <p>
@@ -58,7 +66,6 @@
                     </p>
                 </div>
 
-                <!-- Servicio 3 -->
                 <div class="service-card">
                     <h3>Prototipado Rápido</h3>
                     <p>
@@ -105,12 +112,11 @@
         </div>
     </section>
 
-    <section class="contacto">
+    <section id="contacto" class="contacto">
         <h2>Contacto</h2>
         <p>¿Tenés alguna consulta o querés más información? Escribinos.</p>
 
         <div class="contacto-contenido">
-            <!-- Formulario -->
             <form class="contacto-form">
                 <input type="text" name="nombre" placeholder="Tu nombre" required />
                 <input type="email" name="email" placeholder="Tu correo electrónico" required />
@@ -118,7 +124,6 @@
                 <button type="submit">Enviar</button>
             </form>
 
-            <!-- Info de contacto -->
             <div class="contacto-info">
                 <h3>También podés encontrarnos en:</h3>
                 <p><strong>Tel:</strong> +54 11 30493689</p>
@@ -132,5 +137,10 @@
         <p>© 2025 Scultura 3D - Todos los derechos reservados</p>
     </footer>
 </body>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 
 </html>
