--- a/index.html
+++ b/index.html
@@ -5,35 +5,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <title>Scultura 3D</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="./img/logo.png">
-                <img src="img/logo.png" alt="" />
+
+            <a href="#">
+                <img src="./img/logo.png" alt="" />
             </a>
+
             <a href="https://wa.me/+541130493689" target="_blank" class="text-success fs-4 me-3">
                 <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.instagram.com/tuusuario" target="_blank" class="text-danger fs-4">
+
+            <a href="https://www.instagram.com/tuusuario" target="_blank" class="text-danger fs-4 me-3">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
-            <nav class="_navbar">
-                <ul class="nav-links">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="./pages/nuevoND.html">Nuestros Diseños</a></li>
-                    <li><a href="./pages/tudiseño.html">Hacemos Tu diseño</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
-                </ul>
-            </nav>
+        <nav class="_navbar">
+            <ul class="nav-links">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="./pages/nuevoND.html">Nuestros Diseños</a></li>
+                <li><a href="./pages/tudiseño.html">Hacemos Tu diseño</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+        <div>
+            <a href="./pages/carrito.html" class="carrito-link me-3">
+                <i class="fas fa-shopping-cart fa-lg"></i>
+                <span class="badge" id="contador-carrito">0</span>
+            </a>
+        </div>
     </header>
 
     <section class="hero">
@@ -138,9 +145,10 @@
     </footer>
 </body>
 
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
+
+<script src="./js/index.js"></script>
 
 </html>
