--- a/pages/nuevoND.html
+++ b/pages/nuevoND.html
@@ -4,45 +4,70 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 
     <title>Nuestros Productos</title>
     <link rel="stylesheet" href="../css/newND.css" />
 </head>
 
 <body>
+
     <header>
         <div class="logo">
+
             <a href="../index.html">
-                <img src="../img/logo.png" alt="" />
+                <img src="../img/logo.png" alt="Logo Scultura 3D" />
             </a>
+
+            <a href="https://wa.me/+541130493689" target="_blank" class="text-success fs-4 me-3">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+
+            <a href="https://www.instagram.com/tuusuario" target="_blank" class="text-danger fs-4 me-3">
+                <i class="fab fa-instagram"></i>
+            </a>
+
         </div>
+
         <nav class="_navbar">
             <ul class="nav-links">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#">Nuestros Diseños</a></li>
-                <li><a href="../index.html">Hacemos Tu diseño</a></li>
+                <li><a href="tudiseño.html">Hacemos Tu diseño</a></li>
                 <li><a href="../index.html#contacto">Contacto</a></li>
             </ul>
         </nav>
+
+        <div>
+            <a href="../pages/carrito.html" class="carrito-link me-3">
+                <i class="fas fa-shopping-cart fa-lg"></i>
+                <span class="badge" id="contador-carrito">0</span>
+            </a>
+        </div>
     </header>
 
     <main class="layout">
         <aside class="sidebar">
             <h2>Categorías</h2>
             <ul class="categorias">
-                <li><a href="#">Vasos Ferneteros</a></li>
-                <li><a href="#">Llaveros</a></li>
-                <li><a href="#">Señaladores</a></li>
-                <li><a href="#">Juguetes Anti Stress</a></li>
-                <li><a href="#">Juguetes</a></li>
+                <li><a href="#" data-categoria="Todos">Todos los productos</a></li>
+
+                <li><a href="#" data-categoria="Vasos Ferneteros">Vasos Ferneteros</a></li>
+                <li><a href="#" data-categoria="Llaveros">Llaveros</a></li>
+                <li><a href="#" data-categoria="Señaladores">Señaladores</a></li>
+                <li><a href="#" data-categoria="Juguetes Anti Stress">Juguetes Anti Stress</a></li>
+                <li><a href="#" data-categoria="Juguetes">Juguetes</a></li>
             </ul>
         </aside>
 
         <section class="grid-productos">
-            <div class="card">
+
+            <div class="card" data-categoria="Llaveros">
                 <div class="card-img">
-                    <img src="../img/1.jpg" alt="Producto" />
+                    <img src="../img/1.jpg" alt="Producto 1" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 1</h3>
@@ -51,9 +76,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Juguetes Anti Stress">
                 <div class="card-img">
-                    <img src="../img/2.jpg" alt="Producto" />
+                    <img src="../img/2.jpg" alt="Producto 2" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 2</h3>
@@ -62,9 +87,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Juguetes">
                 <div class="card-img">
-                    <img src="../img/3.jpg" alt="Producto" />
+                    <img src="../img/3.jpg" alt="Producto 3" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 3</h3>
@@ -73,9 +98,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Vasos Ferneteros">
                 <div class="card-img">
-                    <img src="../img/4.jpg" alt="Producto" />
+                    <img src="../img/4.jpg" alt="Producto 4" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 4</h3>
@@ -84,9 +109,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Llaveros">
                 <div class="card-img">
-                    <img src="../img/5.jpg" alt="Producto" />
+                    <img src="../img/5.jpg" alt="Producto 5" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 5</h3>
@@ -95,9 +120,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Vasos Ferneteros">
                 <div class="card-img">
-                    <img src="../img/6.jpg" alt="Producto" />
+                    <img src="../img/6.jpg" alt="Producto 6" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 6</h3>
@@ -106,9 +131,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Juguetes">
                 <div class="card-img">
-                    <img src="../img/7.jpg" alt="Producto" />
+                    <img src="../img/7.jpg" alt="Producto 7" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 7</h3>
@@ -117,9 +142,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Juguetes Anti Stress">
                 <div class="card-img">
-                    <img src="../img/8.jpg" alt="Producto" />
+                    <img src="../img/8.jpg" alt="Producto 8" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 8</h3>
@@ -128,9 +153,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Juguetes">
                 <div class="card-img">
-                    <img src="../img/9.jpg" alt="Producto" />
+                    <img src="../img/9.jpg" alt="Producto 9" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 9</h3>
@@ -139,9 +164,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Llaveros">
                 <div class="card-img">
-                    <img src="../img/10.jpg" alt="Producto" />
+                    <img src="../img/10.jpg" alt="Producto 10" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 10</h3>
@@ -150,9 +175,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Llaveros">
                 <div class="card-img">
-                    <img src="../img/11.jpg" alt="Producto" />
+                    <img src="../img/11.jpg" alt="Producto 11" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 11</h3>
@@ -161,9 +186,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Llaveros">
                 <div class="card-img">
-                    <img src="../img/12.jpg" alt="Producto" />
+                    <img src="../img/12.jpg" alt="Producto 12" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 12</h3>
@@ -172,9 +197,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Vasos Ferneteros">
                 <div class="card-img">
-                    <img src="../img/13.jpg" alt="Producto" />
+                    <img src="../img/13.jpg" alt="Producto 13" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 13</h3>
@@ -183,9 +208,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Vasos Ferneteros">
                 <div class="card-img">
-                    <img src="../img/14.jpg" alt="Producto" />
+                    <img src="../img/14.jpg" alt="Producto 14" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 14</h3>
@@ -194,9 +219,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Juguetes">
                 <div class="card-img">
-                    <img src="../img/15.jpg" alt="Producto" />
+                    <img src="../img/15.jpg" alt="Producto 15" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 15</h3>
@@ -205,9 +230,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Llaveros">
                 <div class="card-img">
-                    <img src="../img/16.jpg" alt="Producto" />
+                    <img src="../img/16.jpg" alt="Producto 16" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 16</h3>
@@ -216,9 +241,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Juguetes">
                 <div class="card-img">
-                    <img src="../img/17.jpg" alt="Producto" />
+                    <img src="../img/17.jpg" alt="Producto 17" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 17</h3>
@@ -227,9 +252,9 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Juguetes">
                 <div class="card-img">
-                    <img src="../img/18.jpg" alt="Producto" />
+                    <img src="../img/18.jpg" alt="Producto 18" />
                 </div>
                 <div class="card-info">
                     <h3>Producto 18</h3>
@@ -238,20 +263,28 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-categoria="Señaladores">
                 <div class="card-img">
-                    <img src="../img/19.jpg" alt="Producto" />
+                    <img src="../img/19.jpg" alt="Producto 19" />
                 </div>
                 <div class="card-info">
-                    <h3>Producto 19</h3>
+                    <h3>Producto 19
+                    </h3>
                     <p class="precio">$950</p>
                     <button class="btn">Agregar al carrito</button>
                 </div>
             </div>
+
         </section>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+
+    <script src="../js/index.js"></script>
+
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </html>
