--- a/pages/tudiseño.html
+++ b/pages/tudiseño.html
@@ -49,7 +49,7 @@
                                 <input type="hidden" name="_subject" value="Solicitud de Diseño Personalizado - Scultura 3D">
                                 <input type="hidden" name="_captcha" value="false">
                                 <!-- Redirección a esta misma página con un parámetro de éxito. CLAVE para ocultar el formulario. -->
-                                <input type="hidden" name="_next" value="http://127.0.0.1:5500/pages/tudiseño.html?enviado=true"> 
+                                <input type="hidden" name="_next" value="https://matiastreglia.github.io/Scultura3D/pages/tudise%C3%B1o.html"> 
                                 
                                 <!-- Campos de Contacto -->
                                 <div class="mb-3">
