--- a/index.html
+++ b/index.html
@@ -119,14 +119,15 @@
         </div>
     </section>
 
-    <section id="contacto" class="contacto">
+<section id="contacto" class="contacto">
     <h2>Contacto</h2>
     <p>¿Tenés alguna consulta o querés más información? Escribinos.</p>
 
     <div class="contacto-contenido" id="contenido-formulario">
         <form class="contacto-form" action="https://formsubmit.co/scultura3d.studio@gmail.com" method="POST">
             <input type="hidden" name="_subject" value="Consulta desde la página de Contacto">
-            <input type="hidden" name="_next" value="https://matiastreglia.github.io/Scultura3D/index.html?enviado=true#contacto">
+            <input type="hidden" name="_next" value="https://matiastreglia.github.io/Scultura3D/index.html?enviado=true#contacto"> 
+            <input type="hidden" name="_captcha" value="false">
 
             <input type="text" name="Nombre" placeholder="Tu nombre" required />
             <input type="email" name="Email" placeholder="Tu correo electrónico" required />
@@ -142,12 +143,12 @@
         </div>
     </div>
 
-    <div id="mensaje-exito" style="display: none; padding: 3rem; max-width: 800px; margin: 3rem auto; border-radius: 10px; background-color: #e6ffed; border: 1px solid #c3e6cb;">
-        <h2 style="color: #155724;">¡Mensaje Enviado con Éxito!</h2>
+    <div id="mensaje-exito" style="display: none; padding: 3rem; max-width: 1000px; margin: 3rem auto; border-radius: 10px; background-color: #e6ffed; border: 1px solid #c3e6cb; text-align: center;">
+        <h2 style="color: #155724; font-size: 2rem;">¡Mensaje Enviado con Éxito!</h2>
         <p style="color: #155724; font-size: 1.1rem; margin-top: 1rem;">
             Gracias por contactarnos. Hemos recibido tu consulta y te responderemos a la brevedad.
         </p>
-        <a href="#inicio" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #28a745; color: white; text-decoration: none; border-radius: 5px;">Volver al Inicio</a>
+        <a href="#" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #28a745; color: white; text-decoration: none; border-radius: 5px;">Volver Arriba</a>
     </div>
 </section>
 
