--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         <p style="color: #155724; font-size: 1.1rem; margin-top: 1rem;">
             Gracias por contactarnos. Hemos recibido tu consulta y te responderemos a la brevedad.
         </p>
-        <!-- ¡CAMBIO AQUÍ! Añadimos un ID para la función de recarga -->
-        <a href="#" id="reiniciar-formulario" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #28a745; color: white; text-decoration: none; border-radius: 5px;">Volver a Contacto</a>
+        <!-- ¡CORRECCIÓN CLAVE! Quitamos el ID y apuntamos directamente a la página limpia. -->
+        <a href="index.html#contacto" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #28a745; color: white; text-decoration: none; border-radius: 5px;">Volver a Contacto</a>
     </div>
 </section>
 
