--- a/pages/tudiseño.html
+++ b/pages/tudiseño.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/hacemostudiseño.css">
 
     <title>Hacemos tu diseño</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 
@@ -18,7 +19,7 @@
                 <img src="../img/logo.png" alt="" />
             </a>
         </div>
-        </div>
+
         <nav class="_navbar">
             <ul class="nav-links">
                 <li><a href="../index.html">Inicio</a></li>
@@ -28,6 +29,7 @@
             </ul>
         </nav>
     </header>
+
     <section class="">
         <div class="container">
             <h1 class="text-center mb-4">Hacemos tu diseño</h1>
@@ -41,37 +43,42 @@
                 <div class="col-lg-8">
                     <div class="card shadow-lg border-0 rounded-4">
                         <div class="card-body p-4">
+
+                            <!-- Contenedor de mensajes -->
                             <div id="form-messages" class="text-center"></div>
 
-<form id="designForm">
-    <div class="mb-3">
-        <label for="nombre" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required name="Nombre" />
-    </div>
+                            <!-- FORMULARIO SIN ACTION (AJAX) -->
+                            <form id="designForm" enctype="multipart/form-data">
 
-    <div class="mb-3">
-        <label for="email" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="email" placeholder="tucorreo@mail.com" required name="Email" />
-    </div>
+                                <div class="mb-3">
+                                    <label for="nombre" class="form-label">Nombre</label>
+                                    <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required name="Nombre" />
+                                </div>
 
-    <div class="mb-3">
-        <label for="mensaje" class="form-label">Descripción del diseño</label>
-        <textarea class="form-control" id="mensaje" rows="5"
-            placeholder="Explicá los detalles del diseño que querés..." required
-            name="Descripción del Diseño"></textarea>
-    </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Correo electrónico</label>
+                                    <input type="email" class="form-control" id="email" placeholder="tucorreo@mail.com" required name="Email" />
+                                </div>
 
-    <div class="mb-3">
-        <label for="imagenes" class="form-label">Subí tus imágenes (opcional)</label>
-        <input class="form-control" type="file" id="imagenes" multiple accept="image/*" name="Archivos de Referencia" />
-    </div>
+                                <div class="mb-3">
+                                    <label for="mensaje" class="form-label">Descripción del diseño</label>
+                                    <textarea class="form-control" id="mensaje" rows="5"
+                                        placeholder="Explicá los detalles del diseño que querés..." required
+                                        name="Descripción del Diseño"></textarea>
+                                </div>
 
-    <div class="d-grid">
-        <button type="submit" class="btn btn-primary btn-lg">
-            Enviar solicitud
-        </button>
-    </div>
-</form>
+                                <div class="mb-3">
+                                    <label for="imagenes" class="form-label">Subí tus imágenes (opcional)</label>
+                                    <input class="form-control" type="file" id="imagenes" multiple accept="image/*" name="Archivos de Referencia" />
+                                </div>
+
+                                <div class="d-grid">
+                                    <button type="submit" class="btn btn-primary btn-lg">
+                                        Enviar solicitud
+                                    </button>
+                                </div>
+                            </form>
+                            <!-- FIN FORMULARIO -->
                         </div>
                     </div>
                 </div>
